# command-center

./: .claude-launch.sh  .claude-prompt.txt  .gitignore  CLAUDE.md  Cargo.toml  README.md  TASK.md  flake.nix
.claude/: .gitignore  launch.sh  prompt.txt  settings.json  settings.local.json  system-prompt.txt
.claude/hooks/: agent-stop.sh  notification-active.sh  notification-idle.sh  permission-gate.sh  post-tool.sh  pre-tool-use.sh  stop.sh  subagent-stop.sh  user-prompt-submit.sh  worktree-read-scope.sh
.github/workflows/: e2e.yml
crates/agent-memory/: Cargo.toml
crates/agent-memory/migrations/: 001_initial.sql  20260320000000_initial.sql  20260320000001_last_accessed_index.sql  20260320000002_rename_tables.sql  20260322000000_unify_memory_types.sql
crates/agent-memory/src/: config.rs  embed.rs  error.rs  index.rs  lib.rs  markdown.rs  memory.rs  primitives.rs  service.rs  store.rs
crates/agent-memory/src/memory/: mod.rs  repo.rs
crates/agent-memory/src/natural_memory/: mod.rs  repo.rs
crates/agent-memory/src/report/: entity.rs  repo.rs
crates/agent-memory/src/research_report/: entity.rs  repo.rs
docs/: design-mcp-watches.md
docs/research/: time-primitives-v2-revisions.md  time-primitives.md
migrations/: 001_initial_schema.sql  002_es_entity_refactor.sql  002_task_events.sql  003_add_event_context.sql  003_project_es_entity.sql  004_soft_delete.sql  004_watches.sql  005_drop_redundant_index_columns.sql  005_task_messages_index.sql
scripts/: test-mcp.sh
skills/: engineer.toml  monitor.toml  noop.toml  reporter.toml  researcher.toml  reviewer.toml  security-auditor.toml
src/: app.rs  assistant.rs  cli.rs  compound_bash.rs  config.rs  jwt.rs  main.rs  mcp.rs  permission.rs  permission_log.rs  primitives.rs  runtime.rs  schedule.rs  service.rs  skill.rs  spawn.rs  store.rs  task.rs  watch.rs
src/project/: entity.rs  repo.rs
src/task/: entity.rs  error.rs  mod.rs  repo.rs
src/tui/: app.rs  chat.rs  claude.rs  dashboard.rs  handlers.rs  input.rs  keybindings.rs  mod.rs  permissions.rs  screen.rs  screen_state.rs  telegram.rs  widgets.rs
src/tui/screen/: mod.rs  project_list.rs  task_list.rs
src/tui/state/: chat_view.rs  mod.rs  project_list.rs  project_state.rs  screen.rs  task_list.rs
src/tui/widgets/: chat_panel.rs  confirm.rs  input_panel.rs  mod.rs  task_panel.rs
src/watch/: entity.rs  error.rs  mod.rs  repo.rs
tests/e2e/: hook_ipc.bats  spawn.bats
