[package]
name = "command-center"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minijinja = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
anyhow = "1"
tabled = "0.17"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
shell-escape = "0.1"
libc = "0.2"
tracing = "0.1"
ureq = { version = "2", features = ["json"] }
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server"] }
schemars = "1.0"
axum = "0.8"

[dev-dependencies]
tempfile = "3"
