[workspace]
resolver = "2"
members = ["crates/agent-memory"]

[package]
name = "command-center"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
es-entity = { git = "https://github.com/galoymoney/es-entity", branch = "task/sqlite-backend-019cdf3d", default-features = false, features = ["sqlite"] }
derive_builder = "0.20"
thiserror = "2.0"
toml = "0.8"
minijinja = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
anyhow = "1"
tabled = "0.17"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
shell-escape = "0.1"
libc = "0.2"
tracing = "0.1"
ureq = { version = "2", features = ["json"] }
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server"] }
schemars = "1.0"
axum = "0.8"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
rand = "0.9"
async-trait = "0.1"
job = { git = "https://github.com/galoymoney/job", branch = "task/job-sqlite-compat-019ce262" }

[dev-dependencies]
tempfile = "3"
