[package]
name = "agent-memory"
version = "0.1.0"
edition = "2024"

[features]
default = []
embed = ["dep:fastembed"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono", "json"] }
sqlite-vec = "0.1"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
es-entity = { git = "https://github.com/galoymoney/es-entity", branch = "task/sqlite-backend-019cdf3d", default-features = false, features = ["sqlite"] }
derive_builder = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
walkdir = "2"
fastembed = { version = "4", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
